[project]
name = "dashboard-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "pandas>=2.0.3",
    "plotly>=5.24.1",
    "statsmodels>=0.14.1",
    "ruff>=0.8.2",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120